--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="On this page I will tell you more about the projects I learned to make with SheCodes Coding Workshops for women"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,14 +19,14 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
-    <title>About Naomi</title>
+    <link href="/src/styles.css" rel="stylesheet" type="text/css" />
+    <title>My Shecodes Projects - Naomi Báez</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/logo-transparant.png" class="logo" />
+          <img src="/images/logo-transparant.png" class="logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -37,22 +41,37 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html"
+            <a class="nav-link" aria-current="page" href="/" title="homepage"
               >Home</a
             >
-            <a class="nav-link active" href="about.html">About Me</a>
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a
+              class="nav-link active"
+              href="/about.html"
+              title="about Naomi's coding projects"
+              >About Me</a
+            >
+            <a class="nav-link" href="/about.html#contact" title="contact Naomi"
+              >Contact Me</a
+            >
           </div>
         </div>
       </div>
     </nav>
     <h1 class="title-about">About me</h1>
-    <h3 class="subtitle-about">A world citizen, mixed from 6 different etnicities</h3>
-    <p class="text-center sub-subtitle-about">Check out the apps I learned to make with SheCodes Workshops</p>
-    <img src="images/arrow-down.png" class="arrow" alt=""/>
-     <div class="card-group mt-3">
+    <h3 class="subtitle-about">
+      A world citizen, mixed from 6 different etnicities
+    </h3>
+    <p class="text-center sub-subtitle-about">
+      Check out the apps I learned to make with SheCodes Workshops
+    </p>
+    <img src="/images/arrow-down.png" class="arrow" alt="arrow downwards" />
+    <div class="card-group mt-3">
       <div class="card">
-        <img src="images/yoga.png"" class="card-img-top p-2" alt="" />
+        <img
+          src="/images/yoga.png"
+          class="card-img-top p-2"
+          alt="girl doing yoga pose"
+        />
         <div class="card-body">
           <h5 class="card-title text-center">My Yoga App</h5>
           <p class="card-text text-center">
@@ -65,7 +84,11 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/weather.png" class="card-img-top p-2" alt="" />
+        <img
+          src="/images/weather.png"
+          class="card-img-top p-2"
+          alt="weather application"
+        />
         <div class="card-body">
           <h5 class="card-title text-center">My Weather App</h5>
           <p class="card-text text-center">
@@ -78,7 +101,11 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/yogurt.png" class="card-img-top p-2" alt="" />
+        <img
+          src="/images/yogurt.png"
+          class="card-img-top p-2"
+          alt="yogurt with blueberries"
+        />
         <div class="card-body">
           <h5 class="card-title text-center">My Yogurt App</h5>
           <p class="card-text text-center">
@@ -91,10 +118,14 @@
         </div>
       </div>
     </div>
-    </div>
     <div id="contact">
       <h1 class="contact">📮 Contact Me</h1>
-      <a href="mailto: baeznayo@gmail.com" class="email-link" target="_blank">
+      <a
+        href="mailto: baeznayo@gmail.com"
+        class="email-link"
+        target="_blank"
+        title="contact Naomi by email"
+      >
         By sending an Email
       </a>
     </div>
