--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="On this page I will share all the projects I learned to make with SheCodes Coding Workshops for women"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,14 +19,18 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <link href="src/styles.css" rel="stylesheet" />
-    <title>Naomi Báez</title>
+    <link href="/src/styles.css" rel="stylesheet" />
+    <title>My Shecodes Projects - Naomi Báez</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/logo-transparant.png" class="logo" />
+          <img
+            src="/images/logo-transparant.png"
+            class="logo"
+            alt="NayoBaez-Logo"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -37,11 +45,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="homepage"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About Me</a>
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a
+              class="nav-link"
+              href="/about.html"
+              title="about Naomi's coding projects"
+              >About Me</a
+            >
+            <a class="nav-link" href="/about.html#contact" title="contact Naomi"
+              >Contact Me</a
+            >
           </div>
         </div>
       </div>
@@ -50,8 +69,15 @@
     <h1>My name is Naomi 👩🏽‍💻</h1>
     <h3>A Traveling Front-End Developer</h3>
     <div class="buttons">
-      <a href="about.html#contact" class="contact-button">Contact Me</a>
-      <a href="about.html" class="about-button">About Me</a>
+      <a href="/about.html#contact" class="contact-button" title="contact Naomi"
+        >Contact Me</a
+      >
+      <a
+        href="/about.html"
+        class="about-button"
+        title="about Naomi's coding projects"
+        >About Me</a
+      >
     </div>
 
     <hr />
@@ -60,8 +86,9 @@
       <div class="row row-yoga">
         <div class="col-sm-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid border rounded p-2 shadow-sm"
+            alt="girl doing yoga pose"
           />
         </div>
         <div class="col-sm-6 mt-5">
@@ -106,8 +133,9 @@
           </div>
           <div class="col-sm-6">
             <img
-              src="images/weather.png"
+              src="/images/weather.png"
               class="img-fluid border rounded p-2 shadow-sm"
+              alt="weather application"
             />
           </div>
         </div>
@@ -119,8 +147,9 @@
         <div class="row row-yogurt">
           <div class="col-sm-6">
             <img
-              src="images/yogurt.png"
+              src="/images/yogurt.png"
               class="img-fluid border rounded p-2 shadow-sm"
+              alt="yogurt with blueberries"
             />
           </div>
           <div class="col-sm-6 mt-5">
