Made the about page more responsive
added more margin to the cards for better view on mobile devices

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       Check out the apps I learned to make with SheCodes Workshops
     </p>
     <img src="/images/arrow-down.png" class="arrow" alt="arrow downwards" />
-    <div class="card-group mt-3">
+    <div class="card-group m-2">
       <div class="card">
         <img
           src="/images/yoga.png"
